# aula08_bootcamp

./: README.md  dados.parquet  etl.py  pipeline.py  pyproject.toml
